--- a/tests/Dotnet.Extensions.TestFramework/Dotnet.Extensions.TestFramework.csproj
+++ b/tests/Dotnet.Extensions.TestFramework/Dotnet.Extensions.TestFramework.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GuardExtentionsTest.cs" />
     <Compile Include="StringExtensionsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
