adding some reflection helper

--- a/src/Shared.Extensions.csproj
+++ b/src/Shared.Extensions.csproj
@@ -11,6 +11,9 @@
     <PackageTags>extension, helper</PackageTags>
     <PackageId>Shared.DotNet.Extensions</PackageId>
     <Product>Shared.Extensions</Product>
+    <AssemblyVersion>1.0.1.0</AssemblyVersion>
+    <FileVersion>1.0.1.0</FileVersion>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
 </Project>
